commit c25f73157f36f3c15ea2ef8e54cf158f4b39a9e1
Date:   Tue Jun 16 17:37:16 2015 +0300

    Fixing the test scripts.

commit ba0002fb6291574284a8cc047265783186c438f5
Date:   Tue Jun 16 14:01:52 2015 +0300

    Added shell scripts to keep the documentation up to date.

commit e6f4db4aae662009602c0f6cf1d1b42fc0628d1a
Date:   Tue Jun 16 01:04:19 2015 +0300

    Added tabview if it's one of the special pull request ones.

commit 388e0d870f42ddd81dbf059b7125937b1e33f3fb
Date:   Mon Jun 15 22:59:52 2015 +0300

    Fixed bugs and tests.

commit 0bc66b4ef1e8fce259f1ba536fd8660459323f9f
Date:   Mon Jun 15 19:33:29 2015 +0300

    Added wiki/Backtesting.creole

commit b1db01863d71497e3f9714024469a8267ba7b0f6
Date:   Sun Jun 14 13:56:04 2015 +0300

    Added wiki/Testing.creole

commit 684170b0f0a398b352b9b7db2e562569af93cca4
Date:   Sun Jun 14 00:08:13 2015 +0300

    Give up on github creole bugs.

commit ee8926c1c5501c0db856f065c43f19ed2f3632e2
Date:   Sat Jun 13 23:47:43 2015 +0300

    Added TitleIndex to wiki/_Sidebar.creole

commit edfabb1d9a6032fd13f7323b2f48fa32a219f4c9
Date:   Sat Jun 13 23:16:43 2015 +0300

    Added wiki/TestsFeatures.txt and wiki/TestsExamples.txt

commit fe5b5f05d0a4fd41a0808120e8ed793e65820300
Date:   Sat Jun 13 20:50:38 2015 +0300

    Work around github creole bugs.

commit 865aeb426f2ec36406ccb0efe48bc32dbbce4585
Date:   Sat Jun 13 20:33:16 2015 +0300

    renamed:    share/doc/08OTBackTest.txt -> wiki/DocOTBackTest.creole

commit c69ca496f87e924622737d1ba275d4cf9ecc21de
Date:   Sat Jun 13 20:00:01 2015 +0300

    Renamed README.creole from README.md and generate it from wiki/FrontPage.creole.

commit 2547ff45dad029328f9da40a64c6712609650a9a
Date:   Sat Jun 13 19:29:25 2015 +0300

    Moved share/doc/05OTCmd2.txt -> wikis/DocOTCmd2.creole etc.

commit 4571853ce340a7b43fa08e79509a433c503438f3
Date:   Fri Jun 12 22:38:17 2015 +0300

    Added the OTCmd2 csv command to resample CSV data to make bactest feeds.
