@@ -1,5 +1,5 @@
-# These are some simple examples of commands that dont need any
-# arguments, and return their results in JSON
+#  These are some simple examples of commands that dont need any
+#  arguments, and return their results in JSON
 #
 # These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
 # the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
