@@ -43,11 +43,15 @@ The calling of OTCmd2 may need to be customized for your setup.
 ==== share/examples/test_rabbitmq_running.sh
 
 Test our communications with the RabbitMQ server.
-You must have the Python package rabbit installed.
+These tests will only work if you have pyrabbit installed:
+http://pypi.python.org/pypi/pyrabbit
+and have the 'rabbitmq_management' plugin to rabbitmq enabled.
+See the OS command 'rabbitmq-plugins list' and make sure
+the 'rabbitmq_management' and 'rabbitmq_web_dispatch' plugins are enabled.
 
-* [[OTCmd2-rabbit.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-rabbit.txt]]
-  Test our communications with the RabbitMQ server.
-  You must have the Python package rabbit installed.
+You dont need to have a listener thread running.
+
+* [[OTCmd2-rabbit.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-rabbit.txt]]
 
 
 ==== share/examples/test_backtest.sh
@@ -56,25 +60,13 @@ These tests do not need to have either RabbitMQ or Mt4 running:
 we need to know where you have your metatrader installed.
 You MUST have created a CSV file for the tests to work on.
 
-* [[OTCmd2-backtest.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-backtest.txt]]
-  These tests do not need to have either RabbitMQ or Mt4 running:
-  we need to know where you have your metatrader installed.
-  You MUST have created a CSV file for the tests to work on.
+* [[OTCmd2-backtest.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest.txt]]
 
-* [[OTCmd2-backtest_recipe.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-backtest_recipe.txt]]
-  These tests do not need to have either RabbitMQ or Mt4 running:
-  we need to know where you have your metatrader installed.
-  You MUST have created a CSV file for the tests to work on.
+* [[OTCmd2-backtest_recipe.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_recipe.txt]]
 
-* [[OTCmd2-backtest_omlette.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-backtest_omlette.txt]]
-  These tests do not need to have either RabbitMQ or Mt4 running:
-  we need to know where you have your metatrader installed.
-  You MUST have created a CSV file for the tests to work on.
+* [[OTCmd2-backtest_omlette.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_omlette.txt]]
 
-* [[OTCmd2-backtest_feed_plot.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-backtest_feed_plot.txt]]
-  These tests do not need to have either RabbitMQ or Mt4 running:
-  we need to know where you have your metatrader installed.
-  You MUST have created a CSV file for the tests to work on.
+* [[OTCmd2-backtest_feed_plot.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_feed_plot.txt]]
 
 
 ==== share/examples/test_mt4_rabbitmq_running.sh
@@ -83,33 +75,19 @@ Test the communications with Mt4 via RabbitMQ;
 these tests NEED to have BOTH RabbitMQ and Mt4 running
 We need to know where you have your metatrader installed.
 
-* [[OTCmd2-sub.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-sub.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-sub.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-sub.txt]]
 
-* [[OTCmd2-chart.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-chart.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-chart.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-chart.txt]]
 
-* [[OTCmd2-pub_wait.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-pub_wait.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-pub_wait.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait.txt]]
+  These tests test some of the common Mt4 commands.
 
-* [[OTCmd2-pub_wait-Accounts.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-pub_wait-Accounts.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-pub_wait-Accounts.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait-Accounts.txt]]
+  These test the Mt4 Accoun information commands.
 
-* [[OTCmd2-pub_wait-jOT.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-pub_wait-jOT.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-pub_wait-jOT.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait-jOT.txt]]
+  These are some simple examples of commands that dont need any
+  arguments, and return their results in JSON
 
-* [[OTCmd2-ord.txt|https://github.com/OpenTrading/OpenTrader/raw/master/OTCmd2-ord.txt]]
-  Test the communications with Mt4 via RabbitMQ;
-  these tests NEED to have BOTH RabbitMQ and Mt4 running
-  We need to know where you have your metatrader installed.
+* [[OTCmd2-ord.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-ord.txt]]
 
